--- a/InfectStatisticWeb/province/安徽3.html
+++ b/InfectStatisticWeb/province/安徽3.html
@@ -1,8 +1,7 @@
 <html lang="en">
 <head>
-  <script type="text/javascript" src="http://cdn.hcharts.cn/jquery/jquery-1.8.3.min.js"></script>
-  <script type="text/javascript" src="http://cdn.hcharts.cn/highcharts/highcharts.js"></script>
-  <script type="text/javascript" src="http://cdn.hcharts.cn/highcharts/exporting.js"></script>
+    <script type="text/javascript" src="jquery-1.8.3.min.js"></script>
+    <script type="text/javascript" src="highcharts.js"></script>
   <script>
     $(function () {
     $('#container').highcharts({
