--- a/InfectStatisticWeb/province/吉林.html
+++ b/InfectStatisticWeb/province/吉林.html
@@ -3,7 +3,7 @@
 
 <head>
 <meta charset="utf-8">
-<title>河北疫情统计情况</title>
+<title>吉林疫情统计情况</title>
 <script src="js/jquery-1.11.1.min.js"></script>
 <script src="js/echarts.min.js"></script>
 <script src="js/china.js"></script>
@@ -13,11 +13,11 @@
 
 <div id="container" style="height: 500px;width:1200px;background:white;margin:20px 0 0;">
     <div style="text-align:center;clear:both;">
-    <iframe name="frame1" id="frame1" src="河北1.html" frameBorder="0" width="800px" height="420px"></iframe><br />
-    <a href="河北1.html" target="frame1"><input type="button" value="累计确诊" style="background-color: rgba(115, 153, 43, 0.747);width: 175px;height: 50px;" /></a>
-    <a href="河北2.html" target="frame1"><input type="button" value="新增确诊" style="background-color: rgba(51, 104, 153, 0.5);width: 175px;height: 50px;"/></a>
-    <a href="河北3.html" target="frame1"><input type="button" value="累计治愈" style="background-color: rgba(201, 8, 191, 0.5);width: 175px;height: 50px;"/></a>
-    <a href="河北4.html" target="frame1"><input type="button" value="确认死亡" style="background-color: rgba(21, 212, 139, 0.5);width: 175px;height: 50px;"/></a>
+    <iframe name="frame1" id="frame1" src="吉林1.html" frameBorder="0" width="800px" height="420px"></iframe><br />
+    <a href="吉林1.html" target="frame1"><input type="button" value="累计确诊" style="background-color: rgba(115, 153, 43, 0.747);width: 175px;height: 50px;" /></a>
+    <a href="吉林2.html" target="frame1"><input type="button" value="新增确诊" style="background-color: rgba(51, 104, 153, 0.5);width: 175px;height: 50px;"/></a>
+    <a href="吉林3.html" target="frame1"><input type="button" value="累计治愈" style="background-color: rgba(201, 8, 191, 0.5);width: 175px;height: 50px;"/></a>
+    <a href="吉林4.html" target="frame1"><input type="button" value="确认死亡" style="background-color: rgba(21, 212, 139, 0.5);width: 175px;height: 50px;"/></a>
     <br /><br /><br />
 </div>
 </div>
