--- a/InfectStatisticWeb/province/福建.html
+++ b/InfectStatisticWeb/province/福建.html
@@ -12,6 +12,7 @@
 <body>
 
 <div id="container" style="height: 500px;width:1200px;background:white;margin:20px 0 0;">
+    <a href="../index.html"><input type="button" value="&lt;&lt;  返回首页" style="background-color: rgba(0, 0, 0, 0.1);width: 100px;height: 30px;border: 0;" /></a>
     <div style="text-align:center;clear:both;">
     <iframe name="frame1" id="frame1" src="福建1.html" frameBorder="0" width="800px" height="420px"></iframe><br />
     <a href="福建1.html" target="frame1"><input type="button" value="累计确诊" style="background-color: rgba(115, 153, 43, 0.747);width: 175px;height: 50px;" /></a>
