--- a/InfectStatisticWeb/index.html
+++ b/InfectStatisticWeb/index.html
@@ -413,10 +413,10 @@
 <div style ="position: relative;top: -400px;left: 200px;width:100px;height: 200px;"><image src="photo/tag.png"></image></div>
 <div style="text-align:center;clear:both;position: relative;top: -450px;">
     <iframe name="frame1" id="frame1" src="province/全国1.html" frameBorder="0" width="800px" height="420px"></iframe><br />
-    <a href="province/全国1.html" target="frame1"><input type="button" value="累计确诊"/></a>
-    <a href="province/全国2.html" target="frame1"><input type="button" value="新增确诊"/></a>
-    <a href="province/全国3.html" target="frame1"><input type="button" value="累计治愈"/></a>
-    <a href="province/全国4.html" target="frame1"><input type="button" value="确认死亡"/></a>
+    <a href="province/全国1.html" target="frame1"><input type="button" value="累计确诊" style="background-color: rgba(115, 153, 43, 0.747);width: 175px;height: 50px;" /></a>
+    <a href="province/全国2.html" target="frame1"><input type="button" value="累计确诊" style="background-color: rgba(51, 104, 153, 0.5);width: 175px;height: 50px;" /></a>
+    <a href="province/全国3.html" target="frame1"><input type="button" value="累计确诊" style="background-color: rgba(201, 8, 191, 0.5);width: 175px;height: 50px;" /></a>
+    <a href="province/全国4.html" target="frame1"><input type="button" value="累计确诊" style="background-color: rgba(21, 212, 139, 0.5);width: 175px;height: 50px;" /></a>
     <br /><br /><br />
 </div>
 </div>
