添加南海区域

--- a/InfectStatisticWeb/index.html
+++ b/InfectStatisticWeb/index.html
@@ -201,15 +201,15 @@
                     return info;
                 }
                 else if(name==dataMap[31].name){
-                    var info = '<a style="line-height:10px;"><p style="font-size:18px">地区：' + params.name + '</p><p style="font-size:14px">确诊：未统计</p><p style="font-size:14px">点击查看详情</p></a>'
+                    var info = '<a style="line-height:10px;"><p style="font-size:18px">地区：' + params.name + '</p><p style="font-size:14px">确诊：未统计</p></a>'
                     return info;
                 }
                 else if(name==dataMap[32].name){
-                    var info = '<a style="line-height:10px;"><p style="font-size:18px">地区：' + params.name + '</p><p style="font-size:14px">确诊：未统计</p><p style="font-size:14px">点击查看详情</p></a>'
+                    var info = '<a style="line-height:10px;"><p style="font-size:18px">地区：' + params.name + '</p><p style="font-size:14px">确诊：未统计</p></a>'
                     return info;
                 }
                 else{
-                	var info = '<a style="line-height:10px;"><p style="font-size:18px">地区：' + params.name + '</p><p style="font-size:14px">确诊：未统计</p><p style="font-size:14px">点击查看详情</p></a>'
+                	var info = '<a style="line-height:10px;"><p style="font-size:18px">地区：南海</p><p style="font-size:14px">确诊：未统计</p></a>'
                     return info;
                 }                  
             },
