--- a/InfectStatisticWeb/index.html
+++ b/InfectStatisticWeb/index.html
@@ -215,7 +215,7 @@
             },
             extraCssText:'width:160px;height:100px;',
             backgroundColor: 'rgba(0,0,0,0.5)',//提示标签背景颜色
-            textStyle: { color: "#fff" } //提示标签字体颜色
+            textStyle: { color: "#fff" } //提示字体颜色
         },
         series: [
             {
