--- a/InfectStatisticWeb/province/黑龙江.html
+++ b/InfectStatisticWeb/province/黑龙江.html
@@ -15,10 +15,10 @@
     <a href="../index.html"><input type="button" value="&lt;&lt;  返回首页" style="background-color: rgba(0, 0, 0, 0.1);width: 100px;height: 30px;border: 0;" /></a>
     <div style="text-align:center;clear:both;">
     <iframe name="frame1" id="frame1" src="黑龙江1.html" frameBorder="0" width="800px" height="420px"></iframe><br />
-    <a href="黑龙江.html" target="frame1"><input type="button" value="累计确诊" style="background-color: rgba(115, 153, 43, 0.747);width: 175px;height: 50px;" /></a>
-    <a href="黑龙江.html" target="frame1"><input type="button" value="新增确诊" style="background-color: rgba(51, 104, 153, 0.5);width: 175px;height: 50px;"/></a>
-    <a href="黑龙江.html" target="frame1"><input type="button" value="累计治愈" style="background-color: rgba(201, 8, 191, 0.5);width: 175px;height: 50px;"/></a>
-    <a href="黑龙江.html" target="frame1"><input type="button" value="确认死亡" style="background-color: rgba(21, 212, 139, 0.5);width: 175px;height: 50px;"/></a>
+    <a href="黑龙江1.html" target="frame1"><input type="button" value="累计确诊" style="background-color: rgba(115, 153, 43, 0.747);width: 175px;height: 50px;" /></a>
+    <a href="黑龙江2.html" target="frame1"><input type="button" value="新增确诊" style="background-color: rgba(51, 104, 153, 0.5);width: 175px;height: 50px;"/></a>
+    <a href="黑龙江3.html" target="frame1"><input type="button" value="累计治愈" style="background-color: rgba(201, 8, 191, 0.5);width: 175px;height: 50px;"/></a>
+    <a href="黑龙江4.html" target="frame1"><input type="button" value="确认死亡" style="background-color: rgba(21, 212, 139, 0.5);width: 175px;height: 50px;"/></a>
     <br /><br /><br />
 </div>
 </div>
