--- a/InfectStatisticWeb/index.html
+++ b/InfectStatisticWeb/index.html
@@ -305,97 +305,97 @@
     myChart.on('click', function (param){
                    	var name=param.name;
                    	if(name==dataMap[0].name){
-                        window.location.href="province/北京.html"
+                        window.open("province/北京.html");
                     }
                     else if(name==dataMap[1].name){
-                        window.location.href="province/天津.html"
+                        window.open("province/天津.html");
                     }
                     else if(name==dataMap[2].name){
-                        window.location.href="province/上海.html"
+                        window.open("province/上海.html");
                     }
                     else if(name==dataMap[3].name){
-                        window.location.href="province/重庆.html"
+                        window.open("province/重庆.html");
                     }
                     else if(name==dataMap[4].name){
-                        window.location.href="province/河北.html"
+                        window.open("province/河北.html");
                     }
                     else if(name==dataMap[5].name){
-                        window.location.href="province/河南.html"
+                        window.open("province/河南.html");
                     }
                     else if(name==dataMap[6].name){
-                        window.location.href="province/云南.html"
+                        window.open("province/云南.html");
                     }
                     else if(name==dataMap[7].name){
-                        window.location.href="province/辽宁.html"
+                        window.open("province/辽宁.html");
                     }
                     else if(name==dataMap[8].name){
-                        window.location.href="province/黑龙江.html"
+                        window.open("province/黑龙江.html");
                     }
                     else if(name==dataMap[9].name){
-                        window.location.href="province/湖南.html"
+                        window.open("province/湖南.html");
                     }
                     else if(name==dataMap[10].name){
-                        window.location.href="province/安徽.html"
+                        window.open("province/安徽.html");
                     }
                     else if(name==dataMap[11].name){
-                        window.location.href="province/山东.html"
+                        window.open("province/山东.html");
                     }
                     else if(name==dataMap[12].name){
-                        window.location.href="province/新疆.html"
+                        window.open("province/新疆.html");
                     }
                     else if(name==dataMap[13].name){
-                        window.location.href="province/江苏.html"
+                        window.open("province/江苏.html");
                     }
                     else if(name==dataMap[14].name){
-                        window.location.href="province/浙江.html"
+                        window.open("province/浙江.html");
                     }
                     else if(name==dataMap[15].name){
-                        window.location.href="province/江西.html"
+                        window.open("province/江西.html");
                     }
                     else if(name==dataMap[16].name){
-                        window.location.href="province/湖北.html"
+                        window.open("province/湖北.html");
                     }
                     else if(name==dataMap[17].name){
-                        window.location.href="province/广西.html"
+                        window.open("province/广西.html");
                     }
                     else if(name==dataMap[18].name){
-                        window.location.href="province/甘肃.html"
+                        window.open("province/甘肃.html");
                     }
                     else if(name==dataMap[19].name){
-                        window.location.href="province/山西.html"
+                        window.open("province/山西.html");
                     }
                     else if(name==dataMap[20].name){
-                        window.location.href="province/内蒙古.html"
+                        window.open("province/内蒙古.html");
                     }
                     else if(name==dataMap[21].name){
-                        window.location.href="province/陕西.html"
+                        window.open("province/陕西.html");
                     }
                     else if(name==dataMap[22].name){
-                        window.location.href="province/吉林.html"
+                        window.open("province/吉林.html");
                     }
                     else if(name==dataMap[23].name){
-                        window.location.href="province/福建.html"
+                        window.open("province/福建.html");
                     }
                     else if(name==dataMap[24].name){
-                        window.location.href="province/贵州.html"
+                        window.open("province/贵州.html");
                     }
                     else if(name==dataMap[25].name){
-                        window.location.href="province/广东.html"
+                        window.open("province/广东.html");
                     }
                     else if(name==dataMap[26].name){
-                        window.location.href="province/青海.html"
+                        window.open("province/青海.html");
                     }
                     else if(name==dataMap[27].name){
-                        window.location.href="province/西藏.html"
+                        window.open("province/西藏.html");
                     }
                     else if(name==dataMap[28].name){
-                        window.location.href="province/四川.html"
+                        window.open("province/四川.html");
                     }
                     else if(name==dataMap[29].name){
-                        window.location.href="province/宁夏.html"
+                        window.open("province/宁夏.html");
                     }
                     else if(name==dataMap[30].name){
-                        window.location.href="province/海南.html"
+                        window.open("province/海南.html");
                     }
                     /*else if(name==dataMap[31].name){
                         window.location.href="province/台湾.html"
