--- a/InfectStatisticWeb/province/福建.html
+++ b/InfectStatisticWeb/province/福建.html
@@ -12,6 +12,13 @@
 <body>
 
 <div id="container" style="height: 500px;width:1200px;background:white;margin:20px 0 0;">
+    <div style="width:420px;height:100px;clear:both;margin: auto;text-align:center;">
+        <div id="id2" style="width:240px;height:60px;margin: auto;color: aqua;font-size: 22px;">截止至2020年2月24日</div>
+        <div id="id3" style="width:140px;height:60px;float:left;color: #A30014;font-size: 20px;">累计确诊:<br/><a style="font-size: 18px;">294</a><br/><a style="font-size: 16px;">昨日+1</a></div>
+        <div id="id3" style="width:140px;height:60px;float:left;color: #A30014;font-size: 20px;">累计治愈:<br/><a style="font-size: 18px;">188</a><br/><a style="font-size: 16px;">昨日+14</a></div>
+        <div id="id3" style="width:140px;height:60px;float:left;color: #A30014;font-size: 20px;">确认死亡:<br/><a style="font-size: 18px;">1</a><br/><a style="font-size: 16px;">昨日+0</a></div>
+    </div>
+    <br/>
     <a href="../index.html"><input type="button" value="&lt;&lt;  返回首页" style="background-color: rgba(0, 0, 0, 0.1);width: 100px;height: 30px;border: 0;" /></a>
     <div style="text-align:center;clear:both;">
     <iframe name="frame1" id="frame1" src="福建1.html" frameBorder="0" width="800px" height="420px"></iframe><br />
